--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./src/image/jardin-logo.png" />
+    <link rel="icon" type="image/svg+xml" href="./src/images/jardin-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -20,6 +20,11 @@
   </head>
   <body>
     <div id="root"></div>
+
+
+  
+
+
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
